Updated character counting to be more efficient